# rust-binary-metafile-template

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  copy-template-into-existing-project.sh  install-systemd.sh  rust-binary-metafile-template.service  rust-binary-metafile-template.timer  rust-metafile-template.service  rust-metafile-template.timer
.github/: dependabot.yml
.github/workflows/: aur.yml  container.yml  coverage.yml  rust.yml  style.yml
.woodpecker/: clippy.yaml  fmt.yaml  release.yaml  test.yaml
src/: cli.rs  main.rs
systemd/: install.sh  remove.sh  systemd.service
systemd/system/: install.sh  remove.sh  service  sysuser  sysusers.conf  tmpfile  tmpfiles.conf
systemd/user/: install.sh  remove.sh  service
