[package]
name = "rust-binary-metafile-template"
description = ""
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/rust-binary-metafile-template"
documentation = "https://docs.rs/rust-binary-metafile-template"
authors = ["EdJoPaTo <rust-binary-metafile-template-rust@edjopato.de>"]
edition = "2018"
rust-version = "1.54.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = "3"
clap_complete = "3"

[dependencies]

[dependencies.clap]
version = "3"
features = ["cargo", "wrap_help"]
