[package]
name = "rust-binary-metafile-template"
description = ""
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/rust-binary-metafile-template"
authors = ["EdJoPaTo <rust-binary-metafile-template-rust@edjopato.de>"]
edition = "2021"
rust-version = "1.70.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "4", features = ["deprecated", "derive", "env"] }
clap_complete = "4"

[dependencies]
clap = { version = "4", features = ["deprecated", "derive", "env", "wrap_help"] }

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
maintainer-scripts = "systemd/system/"
systemd-units = { enable = false, start = false }
assets = [
	["target/release/rust-binary-metafile-template", "/usr/bin/rust-binary-metafile-template", "755"],
	["CHANGELOG.md", "/usr/share/doc/rust-binary-metafile-template/CHANGELOG.md", "644"],
	["LICENSE", "/usr/share/licenses/rust-binary-metafile-template/LICENSE", "644"],
	["README.md", "/usr/share/doc/rust-binary-metafile-template/README.md", "644"],

	["systemd/user/service", "/lib/systemd/user/rust-binary-metafile-template.service", "644"],
	["systemd/user/timer", "/lib/systemd/user/rust-binary-metafile-template.timer", "644"],

	["target/completions/rust-binary-metafile-template.bash", "/usr/share/bash-completion/completions/rust-binary-metafile-template", "644"],
	["target/completions/rust-binary-metafile-template.fish", "/usr/share/fish/completions/rust-binary-metafile-template.fish", "644"],
	["target/completions/_rust-binary-metafile-template", "/usr/share/zsh/site-functions/_rust-binary-metafile-template", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/rust-binary-metafile-template", dest = "/usr/bin/rust-binary-metafile-template", mode = "755" },
	{ source = "CHANGELOG.md", dest = "/usr/share/doc/rust-binary-metafile-template/CHANGELOG.md", mode = "644", doc = true },
	{ source = "LICENSE", dest = "/usr/share/licenses/rust-binary-metafile-template/LICENSE", mode = "644", doc = true },
	{ source = "README.md", dest = "/usr/share/doc/rust-binary-metafile-template/README.md", mode = "644", doc = true },

	{ source = "systemd/system/service", dest = "/usr/lib/systemd/system/rust-binary-metafile-template.service", mode = "644" },
	{ source = "systemd/system/timer", dest = "/usr/lib/systemd/system/rust-binary-metafile-template.timer", mode = "644" },
	{ source = "systemd/system/sysuser", dest = "/usr/lib/sysusers.d/rust-binary-metafile-template.conf", mode = "644" },
	{ source = "systemd/system/tmpfile", dest = "/usr/lib/tmpfiles.d/rust-binary-metafile-template.conf", mode = "644" },

	{ source = "systemd/user/service", dest = "/usr/lib/systemd/user/rust-binary-metafile-template.service", mode = "644" },
	{ source = "systemd/user/timer", dest = "/usr/lib/systemd/user/rust-binary-metafile-template.timer", mode = "644" },

	{ source = "target/completions/rust-binary-metafile-template.bash", dest = "/usr/share/bash-completion/completions/rust-binary-metafile-template", mode = "644" },
	{ source = "target/completions/rust-binary-metafile-template.fish", dest = "/usr/share/fish/vendor_completions.d/rust-binary-metafile-template.fish", mode = "644" },
	{ source = "target/completions/_rust-binary-metafile-template", dest = "/usr/share/zsh/site-functions/_rust-binary-metafile-template", mode = "644" },
]
